整理了代码，并且加了读点的函数

--- a/Shapefile Operation/Form1.resx
+++ b/Shapefile Operation/Form1.resx
@@ -117,16 +117,63 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="spatialToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>449, 17</value>
+  </metadata>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <metadata name="spatialStatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>288, 17</value>
   </metadata>
-  <metadata name="spatialToolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>137, 17</value>
-  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>53</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAGBgAAAEAIACICQAAFgAAACgAAAAYAAAAMAAAAAEAIAAAAAAAAAkAAGEPAABhDwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwIAAAAAAAKAAAAFAAA
+        ABQAAAAMHBIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAFhgAAAAAAAAAAAAHAAAAQAAAAIoFAwC8EA8LzhEPC88FBAG/AAAAkQAAAEcAAAAKAgIAABUX
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABQUAAAAAACgREwCjDw0A8lc5
+        AP9KOxr/eG9S/3RrT/9OQCL/WjsA/xMPAPYSFACvAAAALiQnAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAQEAAADAwAAAAAAOjg8ANJITAD/iVwA/6lwAP+Rg1v/rZ90/5+Ta/+ekGf/nWgB/5Zl
+        AP9HSQD/dH4AvTY6ASr2/wQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAmOz8A0YeT
+        AP9tUwD/86AA/3xXDP/Nvoz/raB0/52Raf/aypX/c1MS//ShAP92VQD/laEA/01UANgAAAAzAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUAAACeOT0B/0tOAf+mbQD/65sA/21WJP/04qb/rqB1/56S
+        av/96av/b1wv/+KVAP+1dwD/R0cA/1BUDP8RDwyvAAAACgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ADgBAQHuUEo4/z4vEf9tSAD/YT8A/zsyHf+Wi2b/a2NI/2JaQf+ajmj/QTkl/1w8AP9vSQD/OyoJ/6qd
+        dP97cVL2AAAASAICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAH4UEw7/ioBf/4lfCv/5pQD/uHoA/3Zp
+        RP+zpXn/b2ZK/2VdQ/+zpXj/a2FF/51oAP/6pgD/k2ME/7Smev/JuYf/GxkSkf/xsAAAAAAAAAAAAAAA
+        AAAAAAAAAAAABAAAAK4yLiL/kIRg/6RtAf//rwD/5poG/9a9ev//+LX/r6F1/5+Ta///+rb/oJNq/6tx
+        AP//sAD/snUA/5aIYf/u26D/PDgpvgAAAAsAAAAAAAAAAAAAAAAAAAAAAAAACgAAAMIjIBf/TEUy/10+
+        AP+OXgD/YkAA/1JKNP+Ngl//XFQ9/1NNOP+Og1//V1A6/1s8AP/akAD/gVUA/0lCLv+EeVj/KCUbzwAA
+        ABUAAAAAAAAAAAAAAAAAAAAAAAAACQAAAL4uKh//amJG/4FVAP/GgwD/h1kA/21kR//Gt4X/gHZW/3Vs
+        Tv/Gt4X/eW9Q/31TAP/wnwD/m2YA/2lfQv+3qXv/NTEkzAAAABMAAAAAAAAAAAAAAAAAAAAAAAAAAQAA
+        AKIpJhz/kIVh/55qA///swD/wX8A/46AWf//9bP/q55z/5uPaP//9rP/nI9m/7F1AP//sgD/q3EA/52Q
+        aP/n1Zv/My8isgAAAAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGgMCwj/gXhZ/3hVD//QigD/hVgA/0Q8
+        KP9/dVb/T0k1/0hCMP9/dVb/SUIu/3lQAP/PiQD/flYH/8GzhP+1p3r/Dw4KeywoHQAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAACMAAADcNTIg/yojC/9uSAD/ilsA/1JFJf/MvIr/kIVh/4N5WP/RwY3/WE0v/4RX
+        AP91TQD/KB8G/4B3Uv9VTjnnAAAALwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAAAAAAB1SU8A/m11
+        AP+hawD/+6YA/29UHP/q2aD/raB0/52Raf/04qb/bVcl//OgAP+xdQD/aGwA/1VdAP8AAACGAAAAAQAA
+        AAAAAAAAAAAAAAAAAAAFBQUDAAAALAAAABkAAAEMIiQApHaAAP9dUQD/3ZIA/4teBv+6rH//rqB1/56S
+        av/Juon/flgL/+WXAP9hUAD/d4IA/yksALIAAAAVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWKCgo0Ckp
+        KbkAAAATAAAAEhweAJw4PQD4VjwA/6RrAP98bUX/p5px/5uPaf+GeFH/nWcA/2FDAP82OgD9ISQAqQAA
+        AB0AAAAAAAAAAAAAAAAAAAAAAAIDBgAAABoAAAA3Xl1d4qKiov8WFhaMAAAAFQAAABYDAAB6AgIAyywd
+        APYtIgz/UEo2/09JNv8uJRD/Lx8A+AMDAM4EBQBqAAAADQAAAAABAQAAAAAAAAAAAAAAAAAEAAAAggAb
+        LN4AMFDjQEdL+728u/9EQkH5ACdB1ABoqb8ALUnbAAUIdAAAAEMAAAB2AAAAkQEBAZIAAAB6AAAASgAA
+        ABUODwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAxAA5Xv8Adr//AkBm/wo4VP8INlL/AFSI/wBr
+        rf8AMVDwAAYKaAAHCwAAAAAADAsIAA0MCQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAGBgYABAQDeSwxNf8HFR/fIjI78VJgaf8KGiTlABUjoAANFYkAAAA2AAAABgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAwMABwcHVi8vLuoEAgGBWFdW3X18
+        e/sGBANjLa7/AAA7XwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAADQAAACkAAAAeGBgYrhUVFYwAAAAHAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAADwAAAAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD+AAcA/AADAPgAAQDwAAAA8AAAAPAAAADgAAAA4AAAAOAA
+        AADgAAAA4AAAAOAAAADgAAAA4AAAAMAAAADAAAAAAAAAAAAAAQAAAAMAAAAPAAAAfwAAD/8AAB//AAD/
+        /wA=
+</value>
+  </data>
 </root>
